--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
               <li><a href="">Just For You</a></li>
           </ul>
         </div>
+        <div id="wrap">
+          <div>
+            <h2 class="masks"> MASKS </h2>
+          </div>
         <div id="productlist">
-            
+          
+
         </div>
-
-
+        </div>  
     </main>
     <footer>
       <div class="aboutus"></div>
