--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2 class="masks"> MASKS </h2>
             <br>
           </div>
-        <div id="productlist" onmouseover="myScript">
+        <div id="productlist" >
           
           
 
