--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <div class="customersupport"></div>
       <div class="waystoshop"></div>
     </footer>
+    <a href="test.html">test</a>
     <script src="js/app.js"></script>
 </body>
 </html>
