--- a/test.html
+++ b/test.html
@@ -10,7 +10,21 @@
 <body>
     
     <header></header>
-    <main></main>
+    <main>
+        <div id="test"></div>
+     <form id="form1"  action="index.html">
+         <!-- <fieldset>
+         <input list='browser'>
+         <datalist id="browser">
+             <option value="bmw"></option>
+             <option value="audi"></option>
+         </datalist>
+
+        </fieldset> -->
+       
+     </form>
+
+    </main>
     <footer></footer>
 
     <script src="js/test.js"></script>
