--- a/test.html
+++ b/test.html
@@ -1,44 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/test.css">
 </head>
-
 <body>
+    <form id="form">
+        <label for="name">name</label>
+        <input id="name" type="text">
 
-    <header></header>
-    <main>
-        <div id="test"></div>
-        <form id="form1">
-            <fieldset>
-                <legend>form for adding parts</legend>
+        <label for="age">age</label>
+        <input id="age" type="text">
+        
+        <label for="notes">notes</label>
+        <input id="notes" type="text">
 
-                <label for="nameoftheproduct  ">product picture</label>
-                <input type="file" id="myFile" name="filename">
-                <br>
-                <label for="nameoftheproduct  ">product name</label>
-                <input id="nameoftheproduct  " type="text">
-                <br>
-                <label for="priceoftheproduct  ">product price</label>
-                <input id="priceoftheproduct  " type="number">
+        <input type="submit">
+    </form>
 
-                <br>
-                <textarea name="message" rows="10" cols="30">add your notes</textarea>
-                <br>
-                <input type="submit">
-            </fieldset>
-
-        </form>
-
-    </main>
-    <footer></footer>
-
+    <table id="table">
+        
+    </table>
     <script src="js/test.js"></script>
 </body>
-
 </html>
